# secrets-vault-plugin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml  release.yml
gradle/: libs.versions.toml
sampleapp/: build.gradle.kts  secrets.json
sampleapp/keystore/: debug.jks  release.jks
sampleapp/src/debug/res/values/: strings.xml
sampleapp/src/dev/cpp/: secrets.cpp
sampleapp/src/dev/java/com/commencis/secretsvaultplugin/sampleapp/: FlavorSecretProviderJava.java  FlavorSecretProviderJavaHelper.kt  FlavorSecretProviderKotlin.kt  Secrets.kt
sampleapp/src/main/: AndroidManifest.xml
sampleapp/src/main/cpp/: CMakeLists.txt  secrets.cpp
sampleapp/src/main/cpp/common/: secrets_util.cpp
sampleapp/src/main/kotlin/com/commencis/secretsvaultplugin/sampleapp/: FlavorSecretProvider.kt  MainActivity.kt  MainSecrets.kt
sampleapp/src/prod/cpp/: secrets.cpp
sampleapp/src/prod/java/com/commencis/secretsvaultplugin/sampleapp/: FlavorSecretProviderJava.java  (+3 more)
sampleapp/src/release/res/values/: strings.xml
secretsvaultplugin/: build.gradle.kts  settings.gradle.kts
secretsvaultplugin/src/main/kotlin/com/commencis/secretsvaultplugin/: KeepSecretsTask.kt  Secret.kt  Secrets.kt  SecretsVaultPlugin.kt  SourceSetToSecretFileMapping.kt
secretsvaultplugin/src/main/resources/cpp/: CMakeLists.txt  secrets.cpp  secrets.hpp
secretsvaultplugin/src/main/resources/cpp/common/: secrets_util.cpp  secrets_util.hpp
secretsvaultplugin/src/main/resources/kotlin/: Secrets.kt  SecretsInjectable.kt
(+5 files in other folders)
